# src/adapters/h3/templates_router.ts
@@ -1,0 +1,14 @@
+import type { AntboxTenant } from "api/antbox_tenant.ts";
+import { getTemplateHandler, listTemplatesHandler } from "api/templates_handlers.ts";
+import { createRouter, type Router } from "h3";
+import { adapt } from "./adapt.ts";
+
+export default function (tenants: AntboxTenant[]): Router {
+	const router = createRouter();
+
+	// Templates operations
+	router.get("/", adapt(listTemplatesHandler(tenants)));
+	router.get("/:uuid", adapt(getTemplateHandler(tenants)));
+
+	return router;
+}
