# src/adapters/oak/server.ts
@@ -8,6 +8,7 @@ import groupsRouter from "adapters/oak/groups_router.ts";
 import actionsRouter from "adapters/oak/actions_router.ts";
 import extensionsRouter from "adapters/oak/extensions_router.ts";
 import aiToolsRouter from "adapters/oak/ai_tools_router.ts";
+import templatesRouter from "adapters/oak/templates_router.ts";
 
 import loginRouter from "adapters/oak/login_v2_router.ts";
 import type { AntboxTenant } from "api/antbox_tenant.ts";
@@ -29,6 +30,7 @@ export default function setupOakServer(
 	const actions = actionsRouter(tenants);
 	const extensions = extensionsRouter(tenants);
 	const aiTools = aiToolsRouter(tenants);
+	const templates = templatesRouter(tenants);
 	const login = loginRouter(tenants);
 
 	const v2 = new Router({ prefix: "/v2" });
@@ -43,6 +45,7 @@ export default function setupOakServer(
 	v2.use(actions.routes());
 	v2.use(extensions.routes());
 	v2.use(aiTools.routes());
+	v2.use(templates.routes());
 	v2.use(login.routes());
 
 	v2.use(nodes.allowedMethods());
@@ -55,6 +58,7 @@ export default function setupOakServer(
 	v2.use(actions.allowedMethods());
 	v2.use(extensions.allowedMethods());
 	v2.use(aiTools.allowedMethods());
+	v2.use(templates.allowedMethods());
 	v2.use(login.allowedMethods());
 
 	app.use(v2.routes());
